--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 # Created by .gitignore support plugin (hsz.mobi)
+### CakePHP template
+tmp/*
+[Cc]onfig/core.php
+[Cc]onfig/database.php
+app/tmp/*
+app/[Cc]onfig/core.php
+app/[Cc]onfig/database.php
+!empty
+.idea
+.idea/
